checks.yml test.yml

--- a/libs/a11yc/resources/ja/test.yml
+++ b/libs/a11yc/resources/ja/test.yml
@@ -4,7 +4,7 @@ tests:
     name: レベルの決め方
     tech: |
       達成レベルはレベルA、レベルAA、レベルAAAの三つがあります。
-      レベルAには、「1.1.1 非テキストコンテンツ（文字でないコンテンツなので、視覚障害者のスクリーンリーダの対象とならず、特別の配慮がないと視覚障害者が情報を全く取得できないもの）」や「2.1.2 キーボードトラップなし（キーボードではまったくアクセスできないコンテンツを作ってしまうと、キーボーボしか利用できないユーザを阻害してしまうことがある）」「2.3 発作の防止（ページ内で閃光を放つコンテンツがあると、利用者の中にはてんかんの症状を起こしてしまうことがある）」など、いわば「最低限配慮すべき達成基準」がまとまっています。
+      レベルAには、「1.1.1 非テキストコンテンツ（文字でないコンテンツなので、視覚障害者のスクリーンリーダの対象とならず、特別の配慮がないと視覚障害者が情報を全く取得できないもの）」や「2.1.2 キーボードトラップなし（キーボードではまったくアクセスできないコンテンツを作ってしまうと、キーボードしか利用できないユーザを阻害してしまうことがある）」「2.3 発作の防止（ページ内で閃光を放つコンテンツがあると、利用者の中にはてんかんの症状を起こしてしまうことがある）」など、いわば「最低限配慮すべき達成基準」がまとまっています。
       レベルAAでは、レベルAでは予算や工数的に対応が難しいが、対応することが望ましい項目が追加されます。たとえば天気予報等ライブの動画へのキャプションの付与（1.2.4）や、収録済みの動画への音声解説の付与（1.2.5）などが求められるようになります。
       レベルAAAでは、収録済みの動画への手話の付与（1.2.6）や、難しい言葉の利用への配慮（3.1.3や3.1.5）など、かなり高度な対応を求められます。一般的な方針としてこのレベルを目標とすることは推奨されていません。
       総務省が提供する「みんなの公共サイト運用ガイドライン（2016年版）」では、公的サイトではレベルAAへの準拠を推奨しています。
@@ -31,7 +31,7 @@ tests:
     name: ページの選出方法「ウェブページ単位」
     tech: |
       「ウェブページ単位」でのチェックの場合は、チェック対象のページ内すべてを対象とする必要があります。たとえば「動画を除く」といった対応をしてはいけません。コメント欄など、ページ作成者が手を出せない項目によってレベルを達成できない場合は、「部分適合」を宣言してください。
-      「ウェブページ単位」でのチェックの場合、その対象のページが一連のプロセスの一部である場合は、一連のプロセスを対象とするようにしてください。たとえばショッピングカートの決済のプロセスがこれにあたります。
+      「ウェブページ単位」でのチェックの場合、その対象のページが一連のプロセスの一部である場合は、一連のプロセス全体を対象とするようにしてください。たとえばショッピングカートの決済のプロセスがこれにあたります。
       このシステムでは、「ウェブページ単位」を対象としている場合は、サイト全体のアクセシビリティ報告書は生成されません。
     urls:
       -
@@ -122,10 +122,10 @@ tests:
         url: http://waic.jp/docs/UNDERSTANDING-WCAG20/media-equiv.html
 
   doc11:
-    name: 「非テキストコンテンツ（カルーセル）」でアクセシビリティを確保するためのメモ
+    name: 「非テキストコンテンツ（カルーセル・スライドショー）」でアクセシビリティを確保するためのメモ
     tech: |
       ウェブサイトにはしばしば「カルーセル（スライドショー）」が設置されます。カルーセルは複数の情報を一箇所で、多くの利用者にとっては目立つ場所に、設置できるため、場合によっては便利なものですが、利用者によっては、バリアになります（2-2-1b）。
-      利用者によっては、自動的な動きのあるコンポーネントは、集中力を妨げられ、本来得たい情報の取得を阻害することがあります（2-2-2b）。
+      利用者によっては、自動的な動きのあるコンポーネントは、集中力を妨げ、本来得たい情報の取得を阻害することがあります（2-2-2b）。
       カルーセルに関しては、「利用しない」あるいは「自動再生しない」あるいは「わかりやすい停止方法を提供する」のいずれかの措置を検討してください。
     urls:
       -
