--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -304,6 +304,11 @@ checks:
           - 1-2-1d
         1-2-2:
           - 1-2-2a
+          - 1-2-2b
+        1-2-3:
+          - 1-2-3a
+        1-2-3:
+          - 1-2-5a
         1-4-7:
           - 1-4-7a
           - 1-4-7b
@@ -1184,6 +1189,7 @@ checks:
           - 2-2-1c
         2-2-2:
           - 2-2-2a
+          - 2-2-2b
         2-2-3:
           - 2-2-3a
           - 2-2-3b
@@ -1476,7 +1482,7 @@ checks:
           url: http://waic.jp/docs/as/info/201406/7.2.4.1.html
       tech: |
         すべてのページで共通の部分は、これをスキップできる実装をすること。共通の部分の例は、グローバルメニューや広告の領域などが挙げられる。スクリーンリーダ利用者や極端に文字サイズを拡大している利用者にとっては、こういった共通の部分をなんども読み上げたり、スクロールによって通り過ぎたりするのが、困難である。
-        なお注意すべきはアクセシビリティ・サポーテッドである。達成基準によれば「見出しによる構造化（H69）」か「ブロックスキップ用のリンクを置く（G001）」（カッコ内はUnderstandingの番号）の何れかを満たせば良いとなっているが、<a href="http://waic.jp/docs/as/info/201406/index.html" target="a11y_target_out">http://waic.jp/docs/as/info/201406/index.html</a> では、「見出しによる構造化」によるブロックスキップはビジュアルブラウザで使えないことが多いので、アクセシビリティ・サポーテッドでないとなっている。ので、G001対応は、現状では2.4.1を満たすために必須である。
+        なお注意すべきはアクセシビリティ・サポーテッドである。達成基準によれば「見出しによる構造化（H69）」か「ブロックスキップ用のリンクを置く（G001）」（カッコ内はUnderstandingの番号）のいずれかを満たせば良いとなっているが、<a href="http://waic.jp/docs/as/info/201406/index.html" target="a11y_target_out">http://waic.jp/docs/as/info/201406/index.html</a> では、「見出しによる構造化」によるブロックスキップはビジュアルブラウザで使えないことが多いので、アクセシビリティ・サポーテッドでないとなっている。ので、G001対応は、現状では2.4.1を満たすために必須である。
         ブロックスキップ用のリンクは、なにもグローバルメニューや広告領域だけでなく、たとえばたくさんのリンクを延々と読み上げ続けるFacebookのplugin-boxなんかも、その対象とすると、便利が良いでしょう。
 
   2-4-2:
@@ -1535,9 +1541,9 @@ checks:
         2-4-5:
           - 2-4-5a
       level: *lv2
-      name: グローバルメニューに加えて、サイトマップ（＋目次ページ）、サイト内検索、関連ページへのリンクなど、ここのページへの到達手段を複数用意している
+      name: グローバルメニューに加えて、サイトマップ（＋目次ページ）、サイト内検索、関連ページへのリンクなど、個々のページへの到達手段を複数用意している
       tech: |
-        一連のプロセスであるショッピングカートの途中のページなどを除いて、ウェブページ一式内のそれぞれのページにたどり着く複数の手段を提供することが望ましい。多くのウェブサイトは、グローバルメニューを備えているが、それに加えて、サイト内検索や、関連ページへのリンク、サイトマップ、目次（ページ）の何れかがあれば、この達成基準を満たせる（ただし「目次ページ」のあり方については、その目次ページが個々のページにたどり着く唯一の手段である場合、注意を要するかもしれない）。
+        一連のプロセスであるショッピングカートの途中のページなどを除いて、ウェブページ一式内のそれぞれのページにたどり着く複数の手段を提供することが望ましい。多くのウェブサイトは、グローバルメニューを備えているが、それに加えて、サイト内検索や、関連ページへのリンク、サイトマップ、目次（ページ）のいずれかがあれば、この達成基準を満たせる（ただし「目次ページ」のあり方については、その目次ページが個々のページにたどり着く唯一の手段である場合、注意を要するかもしれない）。
         目次ページというのは、いわばカテゴリにぶらさがる個々の項目へのリンク一覧である。サイトマップが完全（すべてのページを網羅している）なものでなくても、サイトマップに目次ページを含んでいれば、「複数の手段」を提供したと言える。
         ただし、目次ページより下位のページが、何度もクリックしないとたどり着けないページになっていたら、やはりサイト内検索の実装がのぞましいでしょう。またそういったコンテンツが存在してしまう前に、そもそもサイトの構造をシンプルにすべきでもあります。
 
