--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -1598,6 +1598,7 @@ checks:
           url: http://waic.jp/docs/as/info/201406/7.2.4.4.html
       tech: |
         リンク文字列単独で、リンクの目的を理解できるようにしなければならない。2.4.4と異なるのは文脈依存を許さない点です。2.4.4の「書籍」の例を再掲すると、HTML版、PDF版、MP3版はそれぞれ書籍名をリンク文字列内に持っている必要があります。ただし、「ほとんどの利用者にとってリンクの目的が曖昧（<a href="http://waic.jp/docs/WCAG20/Overview.html#ambiguouslinkdef" target="a11y_target_out">http://waic.jp/docs/WCAG20/Overview.html#ambiguouslinkdef</a>）」な場合は、この限りではないらしいが、「グァバ」の例は、障害のない利用者にも使いづらいように考えられます。ドアの例（2.4.4）の方が、理解しやすいかもしれません。
+        表題があってリンクされており、すこし紹介文があって、「続きを読む」というようにして、こちらも同じところにリンクしていると、機械チェックなどではエラーが出ることがあります。スクリーンリーダーで、タブでリンクへとスキップしながら読んでいてもさほど不自然ではないのですが、「続きを読む」を<code>aria-hidden="true"</code>や<code>tabindex="-1"</code>などして、読まないようにすると、若干タブキーの数が減って、音声環境での利用が快適になります。
 
   2-4-10:
     2-4-10a:
