--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -1,13 +1,13 @@
 errors:
   is_exist_alt_attr_of_img:
-    message: img要素のalt属性がありません
+    message: img要素のalt属性がありません。装飾目的の画像であってもalt属性値そのものを省略しないでください
     criterion: 1-1-1
     code: 1-1-1b
   is_not_empty_alt_attr_of_img_inside_a:
     message: a要素の中にimg要素しかない場合、img要素のalt属性値は空文字でなくリンクの目的を表す文字を入れてください
     criterion: 1-1-1
     code: 1-1-1c
-  is_are_has_alt:
+  is_area_has_alt:
     message: area要素のalt属性が存在しないか、alt属性値は空文字です。area要素の目的を表す文字を入れてください
     criterion: 1-1-1
     code: 1-1-1c
@@ -19,8 +19,12 @@ errors:
     message: 「こちら」をリンクにしないでください
     criterion: 2-4-4
     code: 2-4-4a
-  suspicious_elements:
-    message: 疑わしい要素があります
+  suspicious_opens:
+    message: 疑わしい開始タグがあります
+    criterion: 4-1-1
+    code: 4-1-1a
+  suspicious_ends:
+    message: 疑わしい終了タグがあります
     criterion: 4-1-1
     code: 4-1-1a
   appropriate_heading_descending:
@@ -28,7 +32,7 @@ errors:
     criterion: 1-3-1
     code: 1-3-1a
   is_not_same_alt_and_filename_of_img:
-    message: img要素のalt属性値がファイル名と同一です
+    message: img要素のalt属性値がファイル名と同一です。問題でない場合もあります。
     criterion: 1-1-1
     code: 1-1-1b
   is_not_exists_ja_word_breaking_space:
@@ -69,6 +73,10 @@ errors:
     code: 2-4-9a
   duplicated_attributes:
     message: 属性値が重複している可能性があります
+    criterion: 4-1-1
+    code: 4-1-1a
+  duplicated_ids:
+    message: idが重複しています
     criterion: 4-1-1
     code: 4-1-1a
   unbalanced_quotation:
