--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -92,7 +92,7 @@ checks:
         画像化された文字であれば、原則、画像と一致するaltを付与してある。あわせて、できれば、本当にその文字を画像化すべきか、よく吟味してください。
         装飾目的の画像なので、空のaltを入れている。この場合でも<code>alt=""</code>とするようにして、alt属性値を省略しないようにしてください。
         他サーバの画像にリクエストを飛ばして、ログ解析をするための画像なので、空altを入れている。
-        画像が存在するが、付近に画像と重複する文字列があり、altを省略している（Aさんの画像があり、その付近に「Aさん」と書いてあるような場合、「Aさん」あるいは「Aさんの画像」といったaltは省略したほうが、スクリーンリーダには読みやすい場合がある）。
+        画像が存在するが、付近に画像と重複する文字列があり、altを省略している（Aさんの画像があり、その付近に「Aさん」と書いてあるような場合、「Aさん」あるいは「Aさんの画像」といったaltは省略したほうが、スクリーンリーダには読みやすい場合があります）。
         グラフやチャートの画像があるが、それが何のグラフやチャートであるかを説明したaltがある（例：「6月、7月、8月の売上のグラフ」）。レベルAでは、グラフの値の詳述は求めないが、むろん可能な範囲で値の説明もあると良いでしょう。付近にtableでマークアップした表があるのも良いです。
 
     1-1-1c:
@@ -361,7 +361,7 @@ checks:
       level: *lv1
       name: 映像のない音声が存在するが、同等の情報をテキストで提供している
       tech: |
-        講演の収録音声などは、書き起こしテキストを用意することで、「同等の情報」を提供していると言える。テキスト起こしをする際、「聴衆のざわめき」「（笑い）」など、なるべく詳述する必要がある。
+        講演の収録音声などは、書き起こしテキストを用意することで、「同等の情報」を提供していると言える。テキスト起こしをする際、「聴衆のざわめき」「（笑い）」など、なるべく詳述する必要があります。
       memo: |
         歌を含んだ楽曲の場合は、著作権の問題がなければ、やはり書き起こしテキストを提供すべきでしょう。著作権の問題が発生する場合は、その事情を、「楽曲『XX』の音声。著作権保護の観点から書き起こしテキストは用意できない。」というように説明すれば、おそらく適合。
 
@@ -450,7 +450,7 @@ checks:
       tech: |
         講演の収録映像などは、書き起こしテキストを用意すること。テキスト起こしをする際、「聴衆のざわめき」「（笑い）」など、視覚障害者が、映像を理解するのに必要な情報は詳述する必要がある。単純な話者の発話の書き起こしテキストを用意しただけでは、適合とならない。
         書き起こしテキストを用意しない場合は、画面で何が起こっているかの音声解説（副音声）による説明をいれること。この音声解説も、視覚障害者が動画を理解するために、誰が話しているのかなど、詳述すること。
-        1.2.3を適合とするためには、上記のどちらかを満たす必要が有る。
+        1.2.3を適合とするためには、上記のどちらかを満たす必要があります。
 
   1-2-4:
     1-2-4a:
@@ -656,6 +656,7 @@ checks:
       name: スペースや改行を用いて文章を整形していない
       tech: |
         「博物館」を「博 物 館」と記述してしまうようなこと（いわゆる「単語の泣き別れ」）や、改行や空文字を駆使したレイアウトをして、意味の理解を妨げないようにしてください。改行で行の終端をそろえたり、空文字で行等をそろえていると、スクリーンリーダで情報を取得しづらくなるだけでなく、文字サイズ変更時などにも、たいへん読みづらくなります。また、検索エンジン対策上もけっしてプラスには働きません。
+        他方、スペースを用いて整形するのが自然な場合もあります。エラーチェックに引っかかることがありますが、法人格と法人名を「株式会社 みやこ酒店」というような表記を禁止する必要はないでしょう。
 
   1-3-3:
     1-3-3a:
@@ -729,7 +730,7 @@ checks:
       name: すべての箇所でコントラストは十分（4.5:1）に確保されている。かつ色弱の組み合わせにも配慮がある
       tech: |
         前景色と背景色のコントラスト比は、4.5:1を最低限保つ必要がある。前景色と背景色が、明確に異なっているのでなければ、注意をした方が良い。微妙な箇所については、コントラスト比を計測すること。とくに、本文欄、メニュー類は注意を払うこと。
-        チェック項目の中では、ウェブページ側がコントラストを変更する仕組みを提供していればいいとしているが、弱視の利用者はそもそもOSレベルで白黒反転をしていることもあり、理想的なのは、十分なコントラストを確保することである。
+        チェック項目の中では、ウェブページ側がコントラストを変更する仕組みを提供していればいいとしているが、弱視の利用者はそもそもOSレベルで白黒反転をしていることもあり、理想的なのは、十分なコントラストを確保することでしょう。
         色弱者向けに、特定の色の組み合わせに配慮がある。注意すべきなのは、赤と緑、オレンジと黄緑、緑と茶、青と紫、ピンクと白または灰色、緑と灰色・黒、赤と黒、ピンクと青。
 
     1-4-3b:
@@ -742,7 +743,7 @@ checks:
       level: *lv2
       name: コントラストが甘いが、ウェブページがコントラストを変更する仕組みを提供している
       tech: |
-        いわゆる「背景色の選択」などがこれにあたる。しかし、弱視の利用者はそもそもOSレベルで白黒反転をしていることもあり、理想的なのは、十分なコントラストを確保することである。
+        いわゆる「背景色の選択」などがこれにあたる。しかし、弱視の利用者はそもそもOSレベルで白黒反転をしていることもあり、理想的なのは、十分なコントラストを確保することです。
 
     1-4-3c:
       criterion: *c1-4-3
@@ -989,7 +990,7 @@ checks:
         1-4-8:
           - 1-4-8e
       level: *lv3
-      name: 利用者が文字サイズを変更することを妨げない。
+      name: 利用者が文字サイズを変更することを妨げない
       relations:
         1-4-4:
           - 1-4-4a
@@ -1092,7 +1093,7 @@ checks:
           url: http://waic.jp/docs/as/info/201406/7.2.1.1.html
       tech: |
         ドライビングシミュレータなど、「特定のタイミング」に必然性がある場合は、コンテンツの本質であるといえるでしょう。
-        1.1.1では、コントロールを受け取る要素がアクセシブルでない場合、説明を設けることで適合となる。本項の「ドライビングシミュレータ」も、その対象なので、1.1.1に準じて、どういったコンポーネントなのか説明を付与すること。
+        1.1.1では、コントロールを受け取る要素がアクセシブルでない場合、説明を設けることで適合となります。本項の「ドライビングシミュレータ」も、その対象なので、1.1.1に準じて、どういったコンポーネントなのか説明を付与すること。
 
   2-1-2:
     2-1-2a:
@@ -1111,7 +1112,7 @@ checks:
           name: 7.2.1.2 フォーカス移動に関する達成基準 (等級A)
           url: http://waic.jp/docs/as/info/201406/7.2.1.2.html
       tech: |
-        「キーボードトラップ」とは、ある要素にフォーカスが移ってしまうと、そこからキーボード操作で抜け出せなくなるような実装を指します。モーダルウィンドウなどを作る場合は、それを閉じる操作がマウスだけでなく、キーボードでも行えなければならない。
+        「キーボードトラップ」とは、ある要素にフォーカスが移ってしまうと、そこからキーボード操作で抜け出せなくなるような実装を指します。モーダルウィンドウなどを作る場合は、それを閉じる操作がマウスだけでなく、キーボードでも行えなければいけません。
 
   2-1-3:
     2-1-3a:
@@ -1225,7 +1226,11 @@ checks:
         コンテンツに制限時間を設ける必要がある場合、達成基準2.2.1で求められている次の配慮が必要。制限時間が充分に長い（20時間）か、制限時間を解除できるか、10倍以上の制限時間に調整できるか、延長できるか、その制限時間がコンテンツにとって必然的（オークションなど）なものでなければならない。
         「制限時間」というのは、操作だけを対象としない。カルーセルがある場合、カルーセルが自動的に切り替わっていく間に内容を読まなければならないとき、これは制限時間である。
         また動画や音声がある場合も要注意である。これらも制限時間を設けることで認識することが難しくなる利用者が存在する。
-        動画、音声、カルーセルなどは、制限時間を延長や調整という措置は考えづらいが、一時停止と再開ができれば、本達成基準を満たすことになる（<a href="http://waic.jp/docs/WCAG-TECHS/G4.html" target="a11y_target_out">http://waic.jp/docs/WCAG-TECHS/G4.html</a>）。なお、カルーセルに関しては、2.2.2で類似達成項目があり、利用者が停止できなければ、レベルAが取得できないので、注意すること。
+        動画、音声、カルーセルなどは、制限時間を延長や調整という措置は考えづらいが、一時停止と再開ができれば、本達成基準を満たすことになる（G4）。なお、カルーセルに関しては、2.2.2で類似達成項目があり、利用者が停止できなければ、レベルAが取得できないので、注意すること。
+      urls:
+        -
+          name: G4 コンテンツを一時停止させて、一時停止させたところから再開できるようにする
+          url: http://waic.jp/docs/WCAG-TECHS/G4.html
 
     2-2-1c:
       criterion: *c2-2-1
@@ -1276,9 +1281,13 @@ checks:
           name: 7.2.2.2 一時停止，停止及び非表示に関する達成基準 (等級A)
           url: http://waic.jp/docs/as/info/201406/7.2.2.2.html
       tech: |
-        動きのある、点滅している、スクロールする、又は自動更新する情報は、その情報に注意を逸らされてしまわないように、一時停止、停止、非表示することができる必要がある。読字障害、知的障害、注意力欠如障害のある利用者は、こういったコンテンツのために、他のコンテンツを利用できなくなる恐れがあるため、本項目は「非干渉」である。「他のコンテンツ」については、<a href="http://waic.jp/docs/UNDERSTANDING-WCAG20/time-limits-pause.html" target="a11y_target_out">http://waic.jp/docs/UNDERSTANDING-WCAG20/time-limits-pause.html</a>の「全面広告」に示唆のある事例が上がっているのでみると良い。
-        動画、音声、カルーセル等は、動きのあるコンテンツである。
-        動き、点滅のあるコンテンツが5秒以内の場合は、この達成基準を満たすことになるが、「点滅」は、ときとして「閃光」と同じ弊害をもたらすことがあり、5秒以内であっても、「閃光」的な点滅は許されない。
+        動きのある、点滅している、スクロールする、又は自動更新する情報は、その情報に注意を逸らされてしまわないように、一時停止、停止、非表示することができる必要がある。読字障害、知的障害、注意力欠如障害のある利用者は、こういったコンテンツのために、他のコンテンツを利用できなくなる恐れがあるため、本項目は「非干渉」である。「他のコンテンツ」については「達成基準 2.2.2 を理解する」の「全面広告」に示唆のある事例が上がっているのでみると良い。
+        動画、音声、カルーセル等は、動きのあるコンテンツです。
+        動き、点滅のあるコンテンツが5秒以内の場合は、この達成基準を満たすことになりますが、「点滅」は、ときとして「閃光」と同じ弊害をもたらすことがあり、5秒以内であっても、「閃光」的な点滅は許されません。
+      urls:
+        -
+          name: 達成基準 2.2.2 を理解する
+          url: http://waic.jp/docs/UNDERSTANDING-WCAG20/time-limits-pause.html
 
   2-2-3:
     2-2-3a:
@@ -1450,7 +1459,12 @@ checks:
       non-interference: true
       name: 閃光を放つコンテンツが存在するが、一般閃光閾値及び赤色閃光閾値を下回っている
       tech: |
-        光過敏症の利用者は、閃光によって発作を引き起こされることがあり、その他のコンテンツをまったく利用できなくなるおそれがあるため、これを禁じています。画面ももちろん、動画のなかでも注意をする必要があるので、動画を再生して確認してください。閃光の詳しい定義については、<a href="http://waic.jp/docs/UNDERSTANDING-WCAG20/seizure-does-not-violate.html" target="a11y_target_out">http://waic.jp/docs/UNDERSTANDING-WCAG20/seizure-does-not-violate.html</a>を参照。「点滅」についても注意。
+        光過敏症の利用者は、閃光によって発作を引き起こされることがあり、その他のコンテンツをまったく利用できなくなるおそれがあるため、これを禁じています。画面ももちろん、動画のなかでも注意をする必要があるので、動画を再生して確認してください。閃光の詳しい定義については、「達成基準 2.3.1 を理解する」を参照。「点滅」についても注意。
+      urls:
+        -
+          name: 達成基準 2.3.1 を理解する
+          url: http://waic.jp/docs/UNDERSTANDING-WCAG20/seizure-does-not-violate.html
+
 
   2-3-2:
     2-3-2a:
@@ -1481,9 +1495,16 @@ checks:
           name: 7.2.4.1 ブロックスキップに関する達成基準 (等級A)
           url: http://waic.jp/docs/as/info/201406/7.2.4.1.html
       tech: |
-        すべてのページで共通の部分は、これをスキップできる実装をすること。共通の部分の例は、グローバルメニューや広告の領域などが挙げられる。スクリーンリーダ利用者や極端に文字サイズを拡大している利用者にとっては、こういった共通の部分をなんども読み上げたり、スクロールによって通り過ぎたりするのが、困難である。
-        なお注意すべきはアクセシビリティ・サポーテッドである。達成基準によれば「見出しによる構造化（H69）」か「ブロックスキップ用のリンクを置く（G001）」（カッコ内はUnderstandingの番号）のいずれかを満たせば良いとなっているが、<a href="http://waic.jp/docs/as/info/201406/index.html" target="a11y_target_out">http://waic.jp/docs/as/info/201406/index.html</a> では、「見出しによる構造化」によるブロックスキップはビジュアルブラウザで使えないことが多いので、アクセシビリティ・サポーテッドでないとなっている。ので、G001対応は、現状では2.4.1を満たすために必須である。
+        すべてのページで共通の部分は、これをスキップできる実装をすること。共通の部分の例は、グローバルメニューや広告の領域などが挙げられる。スクリーンリーダ利用者や極端に文字サイズを拡大している利用者にとっては、こういった共通の部分をなんども読み上げたり、スクロールによって通り過ぎたりするのが、困難なのです。
+        なお注意すべきはアクセシビリティ・サポーテッドです。達成基準によれば「見出しによる構造化（H69）」か「ブロックスキップ用のリンクを置く（G1）」（カッコ内はUnderstandingの番号）のいずれかを満たせば良いとなっているが、「7.2.4.1 ブロックスキップに関する達成基準 (等級A)」のアクセシビリティ・サポーテッド情報では、「見出しによる構造化」によるブロックスキップはビジュアルブラウザで使えないことが多いので、アクセシビリティ・サポーテッドでないとなっている。ので、G1対応は、現状では2.4.1を満たすために必須であると考えるべきでしょう。
         ブロックスキップ用のリンクは、なにもグローバルメニューや広告領域だけでなく、たとえばたくさんのリンクを延々と読み上げ続けるFacebookのplugin-boxなんかも、その対象とすると、便利が良いでしょう。
+      urls:
+        -
+          name: H69 コンテンツの各セクションの開始位置に見出し要素を提供する
+          url: http://www.ciaj.or.jp/access/web/docs/WCAG-TECHS/H69.html
+        -
+          name: G1 メインコンテンツエリアへ直接移動するリンクを各ページの先頭に追加する
+          url: http://www.ciaj.or.jp/access/web/docs/WCAG-TECHS/G1.html
 
   2-4-2:
     2-4-2a:
@@ -1510,7 +1531,7 @@ checks:
           url: http://waic.jp/docs/as/info/201406/7.2.4.3.html
       tech: |
         スクリーンリーダや画面拡大をしている利用者はタブキーによるフォーカスの移動を行うことが多い。タブキーによるフォーカスの移動は、素直なHTMLであれば、HTMLの記述順になるが、tabindexを与えることで、変更もできる。tabindexを与える場合は、意味の把握を妨げるような順序設定にならないように注意すること。
-        また、モーダルダイアログを作る場合などは、注意を要する。モーダルダイアログはスクリーンリーダを使っていない利用者にとっては、モーダルダイアログを閉じるまで他の動作はできない。スクリーンリーダを使っている利用者にとっても、同じように振舞うべきであり、タブキーでフォーカス移動をしていると、モーダルを抜けられてしまう、というようなことがあってはならない。
+        また、モーダルダイアログを作る場合などは、注意を要します。モーダルダイアログはスクリーンリーダを使っていない利用者にとっては、モーダルダイアログを閉じるまで他の動作はできない（というか、そういうものを「モーダルダイアログ」と呼びます）。スクリーンリーダを使っている利用者にとっても、同じように振舞うべきであり、タブキーでフォーカス移動をしていると、モーダルを抜けられてしまう、というようなことがあってはならないのです。
 
   2-4-4:
     2-4-4a:
@@ -1528,11 +1549,15 @@ checks:
           name: 7.2.4.4 文脈におけるリンクの目的に関する達成基準 (等級A)
           url: http://waic.jp/docs/as/info/201406/7.2.4.4.html
       tech: |
-        リンク文字列は、そのリンク先がなんであるかを明示するべきである。スクリーンリーダの利用者はタブキー押下だけでリンクのみを辿って文章を読んでいくことが多いが、こういう場合に、それぞれのリンク文字列が固有でなく「続きを読む」や「詳しくはこちら」となっていると、リンク先がなんなのかを把握しづらくなる。
+        リンク文字列は、そのリンク先がなんであるかを明示するべきです。スクリーンリーダの利用者はタブキー押下だけでリンクのみを辿って文章を読んでいくことが多いが、こういう場合に、それぞれのリンク文字列が固有でなく「続きを読む」や「詳しくはこちら」となっていると、リンク先がなんなのかを把握しづらくなる。
         ただ2.4.4では、文脈に頼ったリンク文字列の提供はよしとされている。たとえば書籍の内容がHTML、PDF、MP3で提供されている時に、最初のHTMLだけは書籍のタイトルをリンク文字列に含めているが、以降は「PDF」「MP3」と読み上げることが良しとされている。
         また、<strong>同じ段落内であれば</strong>、いわゆる「こちらリンク」さえも許されるらしい（G53）が、「こちらリンク」については、そもそもあまり用いないほうが良いでしょう。
         致命的なバリアではありませんし、JISなどの規格の中でも規定はないのですが、リンク先がPDF等のダウンロード用のファイルの場合は、ファイルであること、ファイルサイズも併記しておくと、誰にとっても便利が良いでしょう。
         リンク先の消失などで、そもそもリンクが切れている場合、アクセシビリティの文脈で問うべき問題ではないかもしれませんが、使いづらいので改善しましょう。
+      urls:
+        -
+          name: G53 リンクテキストとそれが含まれている文章中のテキストとを組み合わせて、リンクの目的を特定する
+          url: http://www.ciaj.or.jp/access/web/docs/WCAG-TECHS/G53.html
 
   2-4-5:
     2-4-5a:
@@ -1597,8 +1622,16 @@ checks:
           name: 7.2.4.4 文脈におけるリンクの目的に関する達成基準 (等級A)
           url: http://waic.jp/docs/as/info/201406/7.2.4.4.html
       tech: |
-        リンク文字列単独で、リンクの目的を理解できるようにしなければならない。2.4.4と異なるのは文脈依存を許さない点です。2.4.4の「書籍」の例を再掲すると、HTML版、PDF版、MP3版はそれぞれ書籍名をリンク文字列内に持っている必要があります。ただし、「ほとんどの利用者にとってリンクの目的が曖昧（<a href="http://waic.jp/docs/WCAG20/Overview.html#ambiguouslinkdef" target="a11y_target_out">http://waic.jp/docs/WCAG20/Overview.html#ambiguouslinkdef</a>）」な場合は、この限りではないらしいが、「グァバ」の例は、障害のない利用者にも使いづらいように考えられます。ドアの例（2.4.4）の方が、理解しやすいかもしれません。
-        表題があってリンクされており、すこし紹介文があって、「続きを読む」というようにして、こちらも同じところにリンクしていると、機械チェックなどではエラーが出ることがあります。スクリーンリーダーで、タブでリンクへとスキップしながら読んでいてもさほど不自然ではないのですが、「続きを読む」を<code>aria-hidden="true"</code>や<code>tabindex="-1"</code>などして、読まないようにすると、若干タブキーの数が減って、音声環境での利用が快適になります。
+        リンク文字列単独で、リンクの目的を理解できるようにしなければならない。2.4.4と異なるのは文脈依存を許さない点です。2.4.4の「書籍」の例を再掲すると、HTML版、PDF版、MP3版はそれぞれ書籍名をリンク文字列内に持っている必要があります。ただし、「ほとんどの利用者にとってリンクの目的が曖昧」な場合は、この限りではないらしいが、「グァバ」の例は、障害のない利用者にも使いづらいように考えられます。「達成基準 2.4.4 を理解する」のドアの例の方が、理解しやすいかもしれません。
+        表題があってリンクされており、すこし紹介文があって、「続きを読む」というようにして、こちらも表題と同じところにリンクしていると、機械チェックなどではエラーが出ることがあります。スクリーンリーダーで、タブでリンクへとスキップしながら読んでいてもさほど不自然ではないのですが、「続きを読む」を<code>aria-hidden="true"</code>や<code>tabindex="-1"</code>などして、読まないようにすると、タブキー押下の数が減って、音声環境での利用が快適になります。
+      urls:
+        -
+          name: ほとんどの利用者にとって曖昧 (ambiguous to users in general)
+          url: http://waic.jp/docs/WCAG20/Overview.html#ambiguouslinkdef
+        -
+          name: 達成基準 2.4.4 を理解する
+          url: http://waic.jp/docs/UNDERSTANDING-WCAG20/navigation-mechanisms-refs.html
+
 
   2-4-10:
     2-4-10a:
@@ -1616,7 +1649,11 @@ checks:
           - 2-4-6a
       name: 見出しによる構造化を徹底している
       tech: |
-        ウェブページは見出しを用いて構造化されていることが望ましい。この達成基準がAAAであるのは、すこし奇異に見えるかもしれないが、原稿が構造化されていない場合など、コンテンツ製作者が恣意的に見出しを用いて構造化することができないような場合もあるからである（事例についてはUnderstanding（<a href="http://waic.jp/docs/UNDERSTANDING-WCAG20/navigation-mechanisms-headings.html" target="a11y_target_out">http://waic.jp/docs/UNDERSTANDING-WCAG20/navigation-mechanisms-headings.html</a>）を参照）。
+        ウェブページは見出しを用いて構造化されていることが望ましい。この達成基準がAAAであるのは、すこし奇異に見えるかもしれないが、原稿が構造化されていない場合など、コンテンツ製作者が恣意的に見出しを用いて構造化することができないような場合もあるからです（事例については「達成基準 2.4.10 を理解する」を参照してください）。
+      urls:
+        -
+          name: 達成基準 2.4.10 を理解する
+          url: http://waic.jp/docs/UNDERSTANDING-WCAG20/navigation-mechanisms-headings.html
 
   3-1-1:
     3-1-1a:
@@ -1656,7 +1693,7 @@ checks:
           url: http://waic.jp/docs/as/info/201406/7.3.1.1.html
       tech: |
         コンテンツの部分がそれぞれどの自然言語なのかをプログラムに対して明示している。固有名詞、技術用語、言語が不明な語句、及びすぐ前後にあるテキストの言語の一部になっている単語又は語句は除かれる。
-        基本は日本語で書かれていて、一部、英語の文章を引用している場合などは、引用部分の言語をマークアップすると良い。
+        基本は日本語で書かれていて、一部、英語の文章を引用している場合などは、引用部分の言語をマークアップすると良いでしょう。
         また、多言語サイトのheaderあたりによくある言語切り替えはa要素にそれぞれのlang属性を付けると良いでしょう。
 
   3-1-3:
@@ -1690,7 +1727,7 @@ checks:
       tech: |
         一般的でない難しい用語は、その定義を参照できるようになっていることが望ましい。「難しい用語」というのは例えば慣用句なども含む。Understandingの例では、「匙を投げる」が「スプーンを投げる」という意味でない事例を挙げているが、こういった言葉に逐一注釈をしていくというよりも、そもそも難しい言葉を避けるという対応が求められていると考えたほうがシンプルかもしれない。
         あるいは「難しい言葉を使っているページの代替ページ」という考え方自体に難しさがあるかもしれないが、代替ページを用意すべきかもしれない。
-        余談だが、「A11y」というアクセシビリティの用語の説明で、「A11yという表記自体、アクセシブルでない」とあったのが印象的。
+        余談だが、「A11y」というアクセシビリティの用語の説明で、「A11yという表記自体、アクセシブルでない」とあったのが印象的です。
 
   3-1-4:
     3-1-4a:
@@ -1724,7 +1761,7 @@ checks:
           - 3-1-4a
       name: 略語の初出時に、すぐあとに略語を展開した説明がある。あるいは略語はリンク先で説明されている
       tech: |
-        コンテンツ内に略語がある場合は、略語の元の語あるいは意味を知ることができる。3.1.3とも関係があると言える。ちなみにHTMLにはabbr（略語。e.g. XML, HTML）、acronym（頭字語。e.g. LAN, NATO）というタグがあり、それぞれ略語をマークアップし、title属性で略語展開したものを意味づけする仕様があるが、ややアクセシビリティ・サポーテッド状況が怪しいので、要注意。
+        コンテンツ内に略語がある場合は、略語の元の語あるいは意味を知ることができる。3.1.3とも関係があると言えます。ちなみにHTMLにはabbr（略語。e.g. XML, HTML）、acronym（頭字語。e.g. LAN, NATO）というタグがあり、それぞれ略語をマークアップし、title属性で略語展開したものを意味づけする仕様がありますが、ややアクセシビリティ・サポーテッド状況が怪しいので、要注意です。
 
   3-1-5:
     3-1-5a:
@@ -1736,7 +1773,11 @@ checks:
       name: コンテンツは中学校三年生程度の読解力で理解できるか、あるいは理解できる注釈かバージョンが存在する
       tech: |
         コンテンツが前期中等教育レベル（UNESCO基準、9年間の教育を受けたもの、なので、中学校3年生程度）の読解力で読めることが望ましい。それを超える読解レベルを求めるときには、前期中等教育レベルの読解力で理解できる補足的コンテンツまたはバージョンを用意すること。
-        なお、どうやって前期中等教育レベルかどうかを判定するかであるが、Understandingによれば、だいたいどの国にも判定計算式があるからそれを利用したらいいとなっている。しかし、日本語には、そのものズバリのものは今の所ない様子（インターネット上に研究の残滓は散見される）。面白い試みとしては、日本語文章難易度判別システム（<a href="http://jreadability.net" target="a11y_target_out">http://jreadability.net</a>）があった。おそらくここで示されている「中級前半」程度であれば、ほどよろしいかとおもわれるが、これは利用規約によれば「教育・研究目的のみ」で許容されているようなので、商用利用は望めないでしょう。
+        なお、どうやって前期中等教育レベルかどうかを判定するかであるが、Understandingによれば、だいたいどの国にも判定計算式があるからそれを利用したらいいとなっている。しかし、日本語には、そのものズバリのものは今の所ない様子（インターネット上に研究の残滓は散見される）。面白い試みとしては、日本語文章難易度判別システムがあった。おそらくここで示されている「中級前半」程度であれば、ほどよろしいかとおもわれますが、これは利用規約によれば「教育・研究目的のみ」で許容されているようなので、商用利用は望めないでしょう。
+      urls:
+        -
+          name: 日本語文章難易度判別システム
+          url: http://jreadability.net
 
   3-1-6:
     3-1-6a:
@@ -1750,10 +1791,10 @@ checks:
           - 3-1-5a
       name: 人名や地名、固有名詞。あるいは読み方がわからないと文章の意味が不明瞭になる場合に、rubyやかっこ書きで読み方がわかるようになっている。あるいは読み方の音声ファイルが提供されている。
       tech: |
-        日本語の例でいえば端的なものは人名や漢字の読み方がこれに当たるでしょう。rubyを付与したり、かっこで注釈を加えることが望ましい。漢字の場合はそれで良いが、外国語の読み方などについて、手厚い対応としては、発音の音声ファイルを用意する対応も考えられる。
-        日本語に特化した話が続くが、どの程度の漢字に読み仮名を振るかについては、3.1.5を準用して、前期中等教育レベル、というのがひとつの判断になると考えられるが、人名などはこの限りではないし、じっさいのところ、中学校3年生レベルの漢字はそれなりに難しいこともある。
-        Understandingでは、文脈に依存した読み方（典型的な例は「方」を「かた」あるいは「ほう」と読む場合）について、言及がある。個別事例になるが、「方」に関しては、スクリーンリーダはそれほど賢く判別はしてくれないが、しかしそれで意味がわからなくなるというほど致命的でもないため、問題は少ないと言える。
-        いっぽう、これを「発音」の文脈に入れるべきではないかもしれないが、日付をスラッシュで区切った場合は、分数に読まれることがあり、スクリーンリーダでのユーザビリティを高めるためには避けるべきだと思われる。
+        日本語の例でいえば端的なものは人名や漢字の読み方がこれに当たるでしょう。rubyを付与したり、かっこで注釈を加えることが望ましいです。漢字の場合はそれで良いが、外国語の読み方などについて、手厚い対応としては、発音の音声ファイルを用意する対応も考えられる。
+        どの程度の漢字に読み仮名を振るかについては、3.1.5を準用して、前期中等教育レベル、というのがひとつの判断になると考えられるが、人名などはこの限りではないし、じっさいのところ、中学校3年生レベルの漢字はそれなりに難しいこともあるので、このあたりは適宜判断が必要でしょう。
+        Understandingでは、文脈に依存した読み方（典型的な例は「方」を「かた」あるいは「ほう」と読む場合）について、言及があります。個別事例になりますが、「方」に関しては、スクリーンリーダはそれほど賢く判別はしてくれないが、しかしそれで意味がわからなくなるというほど致命的でもないため、問題は少ないと言えます。
+        いっぽう、これを「発音」の文脈に入れるべきではないかもしれないが、日付をスラッシュで区切った場合は、分数に読まれることがあり、スクリーンリーダでのユーザビリティを高めるためには避けるとよいでしょう。
 
   3-2-1:
     3-2-1a:
@@ -1794,9 +1835,13 @@ checks:
       level: *lv2
       name: ウェブページ一式の中で、共通するナビゲーションは、一貫した位置に配置されている
       tech: |
-        広義にはグローバルナビゲーションを一定の位置に記述することであるが、グローバルナビゲーション内の項目の順序についても、サイト内で一貫した順序であるべきという不適合事例がUnderstandingに例示されているので注意。
+        広義にはグローバルナビゲーションを一定の位置に記述することであるが、グローバルナビゲーション内の項目の順序についても、サイト内で一貫した順序であるべきという不適合事例が「達成基準 3.2.3 を理解する」に例示されているので注意。
         たとえば決まった位置に「本文へ」のスキップリンクや検索窓を設置しておくことも重要。
         グローバルナビゲーションが、ドロップダウンメニューを持つことは禁じられていない。
+      urls:
+        -
+          name: 達成基準 3.2.3 を理解する
+          url: http://waic.jp/docs/UNDERSTANDING-WCAG20/consistent-behavior-consistent-locations.html
 
   3-2-4:
     3-2-4a:
