--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -1549,7 +1549,7 @@ checks:
           name: 7.2.4.4 文脈におけるリンクの目的に関する達成基準 (等級A)
           url: http://waic.jp/docs/as/info/201406/7.2.4.4.html
       tech: |
-        リンク文字列は、そのリンク先がなんであるかを明示するべきです。スクリーンリーダの利用者はタブキー押下だけでリンクのみを辿って文章を読んでいくことが多いが、こういう場合に、それぞれのリンク文字列が固有でなく「続きを読む」や「詳しくはこちら」となっていると、リンク先がなんなのかを把握しづらくなる。
+        リンク文字列は、そのリンク先がなんであるかを明示するべきです。スクリーンリーダの利用者はタブキー押下だけでリンクのみを辿って文章を読んでいくことが多いが、こういう場合に、それぞれのリンク文字列が固有でなく「続きを読む」や「詳しくはこちら」となっていると、リンク先がなんなのかを把握しづらくなります。
         ただ2.4.4では、文脈に頼ったリンク文字列の提供はよしとされている。たとえば書籍の内容がHTML、PDF、MP3で提供されている時に、最初のHTMLだけは書籍のタイトルをリンク文字列に含めているが、以降は「PDF」「MP3」と読み上げることが良しとされている。
         また、<strong>同じ段落内であれば</strong>、いわゆる「こちらリンク」さえも許されるらしい（G53）が、「こちらリンク」については、そもそもあまり用いないほうが良いでしょう。
         致命的なバリアではありませんし、JISなどの規格の中でも規定はないのですが、リンク先がPDF等のダウンロード用のファイルの場合は、ファイルであること、ファイルサイズも併記しておくと、誰にとっても便利が良いでしょう。
@@ -1616,14 +1616,17 @@ checks:
       relations:
         2-4-4:
           - 2-4-4a
+        3-2-4:
+          - 3-2-4a
       name: リンク文字列は、一部の例外を除いて単独で理解可能である
       url_as:
         -
           name: 7.2.4.4 文脈におけるリンクの目的に関する達成基準 (等級A)
           url: http://waic.jp/docs/as/info/201406/7.2.4.4.html
       tech: |
-        リンク文字列単独で、リンクの目的を理解できるようにしなければならない。2.4.4と異なるのは文脈依存を許さない点です。2.4.4の「書籍」の例を再掲すると、HTML版、PDF版、MP3版はそれぞれ書籍名をリンク文字列内に持っている必要があります。ただし、「ほとんどの利用者にとってリンクの目的が曖昧」な場合は、この限りではないらしいが、「グァバ」の例は、障害のない利用者にも使いづらいように考えられます。「達成基準 2.4.4 を理解する」のドアの例の方が、理解しやすいかもしれません。
-        表題があってリンクされており、すこし紹介文があって、「続きを読む」というようにして、こちらも表題と同じところにリンクしていると、機械チェックなどではエラーが出ることがあります。スクリーンリーダーで、タブでリンクへとスキップしながら読んでいてもさほど不自然ではないのですが、「続きを読む」を<code>aria-hidden="true"</code>や<code>tabindex="-1"</code>などして、読まないようにすると、タブキー押下の数が減って、音声環境での利用が快適になります。
+        リンク文字列単独で、リンクの目的を理解できるようにしなければなりません。2.4.4と異なるのは文脈依存を許さない点です。2.4.4の「書籍」の例を再掲すると、HTML版、PDF版、MP3版はそれぞれ書籍名をリンク文字列内に持っている必要があります。ただし、「ほとんどの利用者にとってリンクの目的が曖昧」な場合は、この限りではないらしいが、「グァバ」の例は、障害のない利用者にも使いづらいように考えられます。「達成基準 2.4.4 を理解する」のドアの例の方が、理解しやすいかもしれません。
+        表題があってリンクされており、すこし紹介文があって、「続きを読む」というようにして、こちらも表題と同じところにリンクする、という実装はしばしばあります。この場合、「続きを読む」は、単独で理解可能なリンクとは言えません（ちなみに2.4.4では許容されます）。「続きを読む」を「{表題}の続きを読む」と記述すれば、「単独での理解が可能」なので、2.4.9は満たせます。しかし、スクリーンリーダーで、タブでリンクへとスキップしながら読んでいると似たような機能を連続して読み上げることになり少々煩わしくもあります。この場合「続きを読む」（もしくは「{表題}の続きを読む」）を、<code>aria-hidden="true"</code>や<code>tabindex="-1"</code>などして、読まないようにすると、タブキー押下の数が減って、音声環境での利用が快適になります。
+        ちなみに3-2-4aでは、「同じ機能を有するコンポーネントは一貫して識別できる」ことを求めていて、たとえばサイトのお問い合わせフォームへのリンクが「お問い合わせフォーム」だったり「お問い合わせはこちらから」だったりして統一されていないことを禁じています（つまり「お問い合わせフォーム」か「お問い合わせはこちらから」に一貫せよと言っています）。2.4.9の項としては、リンクの目的を理解するということは妨げていないと考えられますが、ただリンクの文字列が理解可能であっても、表記の揺れが利用者を不安にすることがあるかもしれない、ということは意識する必要があるでしょう。
       urls:
         -
           name: ほとんどの利用者にとって曖昧 (ambiguous to users in general)
@@ -1631,7 +1634,6 @@ checks:
         -
           name: 達成基準 2.4.4 を理解する
           url: http://waic.jp/docs/UNDERSTANDING-WCAG20/navigation-mechanisms-refs.html
-
 
   2-4-10:
     2-4-10a:
@@ -1849,11 +1851,25 @@ checks:
       pass:
         3-2-4:
           - 3-2-4a
+      relations:
+        2-4-9:
+          - 2-4-9a
       level: *lv2
       name: ウェブページ一式の中で、同じ機能を提供するラベルは一貫している。
       tech: |
-        同じ機能を提供するリンクやボタンなどはウェブページ一式の中で一貫している必要がある。この達成基準は結構見落としやすい。なぜならば、ほとんど自明と思えるようなラベルであっても、厳密に一貫していない場合は、この達成基準を満たせないからである。
-        不適合事例で上がっている例が、「検索」ボタンと「探す」ボタンが同様の機能を提供している場合。これはラベルが異なっているためにNGとなる。
+        同じ機能を提供するリンクやボタンなどはウェブページ一式の中で一貫している必要があります。この達成基準は結構見落としやすいです。ほとんど自明と思えるようなラベルであっても、厳密に一貫していない場合は、この達成基準を満たせないからです。不適合事例で上がっている例が、「検索」ボタンと「探す」ボタンが同様の機能を提供している場合（英語ではfindとsearchで説明されています）ですが、これはラベルが異なっているためにNGとなります。
+        リンク先が同じでリンク文字列が異なる場合も注意の対象です（G197）。問い合わせページのリンク先が「問い合わせ」であったり「問い合わせフォーム」だったりすることは、NGのようです。
+        また、ウェブページ一式のトップページへのリンクが「トップ」だったり、「トップページへ」だったり、サイト名だったりすることがあります。コンテンツ内でこういったリンク先の表記揺れは避けるようにしましょう。
+        ページの上部にあるサイト名のaltを付与したロゴ画像がトップページのリンクになっていることは比較的よくある実装です。また、同時にパンくずのトップページへのリンクが、サイト名でないこともよくある実装です。解釈が揺れるところかもしれませんが、「サイト名ロゴをクリックするとトップページに行く」という機能の一貫性と、「パンくずでのTOPという文字がトップページに行く」という機能の一貫性が担保されていれば、この文字列が一致していなくてもよいと考えられます。「達成基準 3.2.4 を理解する」の「事例 3： 他のページへの一貫したリンクのラベル」を参照してください。
+        ちなみに2.4.9も確認してください。この「問い合わせ」の例では、ラベルが一致していないことで、本項目を満たせませんが、2.4.9で求められている「リンクの機能を理解する」という点では、問題がないとも言えます。
+        たとえば「記事の詳細を読むリンク」が「こちら」という一貫したラベルであるからよいと考えるのは2.4.9の観点から危険です。
+      urls:
+        -
+          name: 達成基準 3.2.4 を理解する
+          url: http://waic.jp/docs/UNDERSTANDING-WCAG20/consistent-behavior-consistent-functionality.html
+        -
+          name: G197 同じ機能を有するコンテンツに対して、一貫したラベル、識別名及び代替テキストを用いる
+          url: http://www.ciaj.or.jp/access/web/docs/WCAG-TECHS/G197.html
 
   3-2-5:
     3-2-5a:
