--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -1,21 +1,21 @@
 errors:
-  is_exist_alt_attr_of_img:
+  alt_attr_of_img:
     message: img要素のalt属性がありません。装飾目的の画像であってもalt属性値そのものを省略しないでください
     criterion: 1-1-1
     code: 1-1-1b
-  is_not_empty_alt_attr_of_img_inside_a:
+  empty_alt_attr_of_img_inside_a:
     message: a要素の中にimg要素しかない場合、img要素のalt属性値は空文字でなくリンクの目的を表す文字を入れてください
     criterion: 1-1-1
     code: 1-1-1c
-  is_area_has_alt:
+  area_has_alt:
     message: area要素のalt属性が存在しないか、alt属性値は空文字です。area要素の目的を表す文字を入れてください
     criterion: 1-1-1
     code: 1-1-1c
-  is_img_input_has_alt:
+  img_input_has_alt:
     message: input要素のalt属性が存在しないか、alt属性値が空文字です。input要素のtypeがimageの時には目的を表す文字を入れてください
     criterion: 1-1-1
     code: 1-1-1c
-  is_not_here_link:
+  here_link:
     message: 「こちら」をリンクにしないでください
     criterion: 2-4-4
     code: 2-4-4a
@@ -31,19 +31,19 @@ errors:
     message: 見出しの降順が妥当ではありません
     criterion: 1-3-1
     code: 1-3-1a
-  is_not_same_alt_and_filename_of_img:
+  same_alt_and_filename_of_img:
     message: img要素のalt属性値がファイル名と同一です。問題でない場合もあります。
     criterion: 1-1-1
     code: 1-1-1b
-  is_not_exists_ja_word_breaking_space:
+  ja_word_breaking_space:
     message: 空白による整形の可能性があります
     criterion: 1-3-2
     code: 1-3-2b
-  is_not_exists_meanless_element:
+  exists_meanless_element:
     message: 意味づけのないHTML要素を使っています
     criterion: 1-3-1
     code: 1-3-1a
-  is_not_style_for_structure:
+  style_for_structure:
     message: 色や大きさに依存した情報提供の可能性があります
     criterion: 1-3-1
     code: 1-3-1a
@@ -59,7 +59,7 @@ errors:
     message: html要素で文書の初期設定言語を特定してください
     criterion: 3-1-1
     code: 3-1-1a
-  is_not_exist_same_page_title_in_same_site:
+  same_page_title_in_same_site:
     message: チェック対象のサイトに同じtitle要素のページが存在します
     criterion: 2-4-2
     code: 2-4-2a
