--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -39,7 +39,7 @@ errors:
     message: 空白による整形の可能性があります
     criterion: 1-3-2
     code: 1-3-2b
-  exists_meanless_element:
+  meanless_element:
     message: 意味づけのないHTML要素を使っています
     criterion: 1-3-1
     code: 1-3-1a
