--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -586,6 +586,7 @@ checks:
         情報の意味を要素の色、大きさ、位置のみで提供していないこと。文章はh*やstrongなどを用いて構造化し、CSSなしでもきちんと情報が伝わるようにすること。
         見出しはh1〜h6が、順序良く降順になっているべきです。h1が大見出し、h2が中見出し、h3が小見出しだとすると、h1のつぎにh3が現れるのは不自然です。
         NGの例は「右の写真は……」「カレンダの赤いマスは……」「赤い文字の項目は必須項目です」というようなものが挙げられるでしょう。ただし「写真の中の右上の人物は……」というような情報提供は、これにあたらない。また、この達成基準は、かならずしも、カレンダの休日を赤で表してはいけないとは<strong>言っていない</strong>ことに注意すべきです。色がわからない人にとっては、きちんとわかるように提供しつつも、色がわかる人がわかりやすいということを妨げる必要はありません。
+        formを使う時には、labelを使うことで、formのアクセシビリティが向上します。labelは実はHTML4.01では、複数のidを相手にしたり、複数の要素を内包しても文法違反ではありませんが、アクセシビリティ・サポーテッドがあまり確かでないので、特に理由がなければ1対1対応にしておいたほうが安全です。
 
     1-3-1b:
       criterion: *c1-3-1
