--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -83,6 +83,9 @@ checks:
           - 1-1-1a
           - 1-1-1b
       level: *lv1
+      relations:
+        1-1-1:
+          - 1-1-1d
       url_as:
         -
           name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
@@ -91,6 +94,8 @@ checks:
       tech: |
         画像化された文字であれば、原則、画像と一致するaltを付与してある。あわせて、できれば、本当にその文字を画像化すべきか、よく吟味してください。
         装飾目的の画像なので、空のaltを入れている。この場合でも<code>alt=""</code>とするようにして、alt属性値を省略しないようにしてください。
+        低速回線環境の利用者が、画像表示をオフにしていることがあります。適切なaltは、「画像をあえて表示するかどうか」の判断にもなるので、なるべく丁寧にいれてください。
+        HTML5においては、alt省略の例外もあるようですが、この例外を適用するためには、HTML5の仕様をよく理解した上で適用してください。
         他サーバの画像にリクエストを飛ばして、ログ解析をするための画像なので、空altを入れている。
         画像が存在するが、付近に画像と重複する文字列があり、altを省略している（Aさんの画像があり、その付近に「Aさん」と書いてあるような場合、「Aさん」あるいは「Aさんの画像」といったaltは省略したほうが、スクリーンリーダには読みやすい場合があります）。
         グラフやチャートの画像があるが、それが何のグラフやチャートであるかを説明したaltがある（例：「6月、7月、8月の売上のグラフ」）。レベルAでは、グラフの値の詳述は求めないが、むろん可能な範囲で値の説明もあると良いでしょう。付近にtableでマークアップした表があるのも良いです。
