--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -47,6 +47,10 @@ errors:
     message: 意味づけのないHTML要素を使っています
     criterion: 1-3-1
     code: 1-3-1a
+  meanless_element_timing:
+    message: 動き、点滅をHTMLでマークアップしないでください
+    criterion: 2-2-2
+    code: 2-2-2b
   style_for_structure:
     message: 色や大きさに依存した情報提供の可能性があります
     criterion: 1-3-1
@@ -56,13 +60,25 @@ errors:
     criterion: 2-4-4
     code: 2-4-4a
   titleless:
-    message: title要素は必須です
+    message: title要素が存在しないか、title要素の中身が空（あるいは空文字）です
     criterion: 2-4-2
     code: 2-4-2a
   langless:
     message: html要素で文書の初期設定言語を特定してください
     criterion: 3-1-1
     code: 3-1-1a
+  different_lang:
+    message: langの値が矛盾しています
+    criterion: 4-1-1
+    code: 4-1-1a
+  invalid_page_lang:
+    message: ページの基本的な言語指定におけるlangの値が妥当でありません
+    criterion: 3-1-1
+    code: 3-1-1a
+  invalid_partial_lang:
+    message: 一部分の言語指定におけるlangの値が妥当でありません
+    criterion: 3-1-2
+    code: 3-1-2a
   same_page_title_in_same_site:
     message: チェック対象のサイトに同じtitle要素のページが存在します
     criterion: 2-4-2
@@ -85,6 +101,10 @@ errors:
     code: 4-1-1a
   duplicated_ids:
     message: idが重複しています
+    criterion: 4-1-1
+    code: 4-1-1a
+  duplicated_accesskeys:
+    message: accesskeyが重複しています
     criterion: 4-1-1
     code: 4-1-1a
   unbalanced_quotation:
@@ -113,10 +133,14 @@ errors:
     criterion: 1-3-1
     code: 1-3-1a
   lackness_of_form_ends:
-    message: きちんと閉じられていないform要素があるようです
+    message: きちんとネストしていないform要素があるようです
     criterion: 4-1-1
     code: 4-1-1a
   unique_label:
     message: labelの文字列に重複があり、識別性が損なわれている可能性があります
     criterion: 2-4-6
     code: 2-4-6a
+  meta_refresh:
+    message: meta要素のrefreshによる自動更新は避けてください
+    criterion: 2-2-1
+    code: 2-2-1b
