add validate and fix docs

--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -1509,6 +1509,7 @@ checks:
       tech: |
         すべてのページで共通の部分は、これをスキップできる実装をすること。共通の部分の例は、グローバルメニューや広告の領域などが挙げられる。スクリーンリーダ利用者や極端に文字サイズを拡大している利用者にとっては、こういった共通の部分をなんども読み上げたり、スクロールによって通り過ぎたりするのが、困難なのです。
         なお注意すべきはアクセシビリティ・サポーテッドです。達成基準によれば「見出しによる構造化（H69）」か「ブロックスキップ用のリンクを置く（G1）」（カッコ内はUnderstandingの番号）のいずれかを満たせば良いとなっているが、「7.2.4.1 ブロックスキップに関する達成基準 (等級A)」のアクセシビリティ・サポーテッド情報では、「見出しによる構造化」によるブロックスキップはビジュアルブラウザで使えないことが多いので、アクセシビリティ・サポーテッドでないとなっている。ので、G1対応は、現状では2.4.1を満たすために必須であると考えるべきでしょう。
+        frame要素やiframe要素はまとめてブロックスキップの対象とすることが可能です。なんのframe/iframeなのか、title属性できちんと情報提供することでブロックスキップの判断のたすけになります。
         ブロックスキップ用のリンクは、なにもグローバルメニューや広告領域だけでなく、たとえばたくさんのリンクを延々と読み上げ続けるFacebookのplugin-boxなんかも、その対象とすると、便利が良いでしょう。
       urls:
         -
