add empty img validate

--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -593,8 +593,9 @@ checks:
         u要素、s要素、strike要素、basefont要素、center要素、font要素は、代わりにCSSを用いて構造と表現を分離するようにしてください。sやstrikeの場合はdel要素に置き換えても良いでしょう。
         見出しはh1〜h6が、順序良く降順になっているべきです。h1が大見出し、h2が中見出し、h3が小見出しだとすると、h1のつぎにh3が現れるのは不自然です。
         NGの例は「右の写真は……」「カレンダの赤いマスは……」「赤い文字の項目は必須項目です」というようなものが挙げられるでしょう。ただし「写真の中の右上の人物は……」というような情報提供は、これにあたらない。また、この達成基準は、かならずしも、カレンダの休日を赤で表してはいけないとは<strong>言っていない</strong>ことに注意すべきです。色がわからない人にとっては、きちんとわかるように提供しつつも、色がわかる人がわかりやすいということを妨げる必要はありません。
-        formを使う時には、labelを使うことで、formのアクセシビリティが向上します。labelは実はHTML4.01では、複数のidを相手にしたり、複数の要素を内包しても文法違反ではありませんが、アクセシビリティ・サポーテッドがあまり確かでないので、特に理由がなければ1対1対応にしておいたほうが安全です。
+        formを使う時には、labelを使うことで、formのアクセシビリティが向上します。labelは実はHTML4.01では、複数のラベル可能要素を内包しても文法違反ではありませんが、アクセシビリティ・サポーテッドがあまり確かでないので、特に理由がなければ1対1対応にしておいたほうが安全です。
         多くのスクリーンリーダが、input要素等のtitle属性値をラベルとして読み上げますが、labelもtitleも書いている場合は、これを一致させておいたほうが安全です（現時点ではほとんどの場合、titleが優先して読み上げられるようです）。その観点からツールチップ表示を期待したtitle属性に関しては、注意してください。また、ツールチップ表示を期待している場合は、hoverでしか表示しないことが多く、focusでは表示されないことが多いようです。この点にも注意を払っておいてください。
+        WAI-ARIA属性のaria-labelとaria-labelledbyの普及も進んでいますが、現時点では、スクリーンリーダのことを考えるとlabel（あるいはtitle）があるほうが安全です。
 
     1-3-1b:
       criterion: *c1-3-1
