--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -93,7 +93,7 @@ checks:
       name: 画像（img、area、input要素の画像ボタン等）には適切なalt属性値があてがわれている
       tech: |
         画像化された文字であれば、原則、画像と一致するaltを付与してある。あわせて、できれば、本当にその文字を画像化すべきか、よく吟味してください。
-        装飾目的の画像なので、空のaltを入れている。この場合でも<code>alt=""</code>とするようにして、alt属性値を省略しないようにしてください。
+        装飾目的の画像なので、altを空にしている。この場合でも<code>alt=""</code>とするようにして、alt属性値を省略しないようにしてください。<code>alt=" "</code>など空白文字をaltにいれておくと、スクリーンリーダごとに対応が異なるので、装飾目的の画像の場合は、空白文字でなく空文字にするほうがベターです。全角空白や&amp;nbsp;は、空白文字の扱いにすらならないので、これらの文字のみでaltとするのは避けてください。ちなみに、<code>role="presentation"</code>というように、装飾目的であることを属性値で明示すると、このアクセシビリティチェッカーのチェック時に警告が出なくなります。
         低速回線環境の利用者が、画像表示をオフにしていることがあります。適切なaltは、「画像をあえて表示するかどうか」の判断にもなるので、なるべく丁寧にいれてください。
         HTML5においては、alt省略の例外もあるようですが、この例外を適用するためには、HTML5の仕様をよく理解した上で適用してください。
         他サーバの画像にリクエストを飛ばして、ログ解析をするための画像なので、空altを入れている。
