--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -1698,6 +1698,27 @@ checks:
       pass:
         3-1-2:
           - 3-1-2a
+          - 3-1-2b
+      non-exist:
+        - 3-1-2
+      level: *lv2
+      relations:
+        3-1-1:
+          - 3-1-1a
+      name: 部分的に使われている、そのページの基本的な言語以外の言語は存在しない。
+      url_as:
+        -
+          name: 7.3.1.1 ページの言語に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.3.1.1.html
+      tech: |
+        関連する達成基準が「適用なし適合」になります。
+
+    3-1-2b:
+      criterion: *c3-1-2
+      pass:
+        3-1-2:
+          - 3-1-2a
+          - 3-1-2b
       level: *lv2
       relations:
         3-1-1:
@@ -1802,6 +1823,27 @@ checks:
       pass:
         3-1-6:
           - 3-1-6a
+          - 3-1-6b
+      non-exist:
+        - 3-1-6
+      level: *lv3
+      relations:
+        3-1-5:
+          - 3-1-5a
+      name: 発音の理解がコンテンツの理解に必須になるような表現は存在しない。
+      url_as:
+        -
+          name: 7.3.1.1 ページの言語に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.3.1.1.html
+      tech: |
+        関連する達成基準が「適用なし適合」になります。
+
+    3-1-6b:
+      criterion: *c3-1-6
+      pass:
+        3-1-6:
+          - 3-1-6a
+          - 3-1-6b
       level: *lv3
       relations:
         3-1-5:
