add selected reasons

--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -312,7 +312,10 @@ checks:
           - 1-2-2b
         1-2-3:
           - 1-2-3a
-        1-2-3:
+        1-2-4:
+          - 1-2-4a
+          - 1-2-4b
+        1-2-5:
           - 1-2-5a
         1-4-7:
           - 1-4-7a
@@ -841,7 +844,7 @@ checks:
         1-4-9:
           - 1-4-9a
       level: *lv2
-      name: 画像化された文字はロゴのみである
+      name: 画像化された文字は書体のサンプル、ロゴタイプ、ブランドなど、伝える情報にとってそのテキストの特定の表現が必要不可欠である。
 
   1-4-6:
     1-4-6a:
