--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -844,7 +844,13 @@ checks:
         1-4-9:
           - 1-4-9a
       level: *lv2
-      name: 画像化された文字は書体のサンプル、ロゴタイプ、ブランドなど、伝える情報にとってそのテキストの特定の表現が必要不可欠である。
+      name: 画像化された文字は書体のサンプル、ロゴタイプ、ブランドなど、伝える情報にとってそのテキストの特定の表現が必要不可欠である
+      tech: |
+        基本的に、「画像化された文字」は、使いづらい利用者がいるので、推奨されませんが、視覚的な効果をCSSで表現できない場合は、画像化された文字を使って良いとしているのが、1.4.5です（ただし、「画像化された文字」なので、altは必要です）。
+        Understanding WCAG2.0では、ロゴ、書体サンプルなどを「視覚的な効果が必要不可欠」と定義していて、これは明確でわかりやすいのですが、たとえば「どんな環境でもアンチエイリアスをかけた表示をしたい」「この見出しはどうしてもこのフォントで表現したい」なども、「視覚的な効果をCSSで表現できない」としてよいようです。
+        訴求効果のためのバナー画像を置く場合（リンク）、特定の見出しを特に目立たせたい場合（構造）など、重要な場所で使うことが多い手法ですので、altを忘れないようにしましょう。
+        より厳しい1-4-9aという達成基準があり、そちらでは、この例外措置がありません。言い換えると、諸条件を満たさなければ、ロゴ、書体サンプルなど以外で、画像化された文字を使ってはならない、視覚的な効果は、CSSなどで実装できる範囲にとどめた表現にしなければならない、ということになります。
+        画像化された文字をJavaScript等で、テキスト情報に置き換えて、テキストとして扱うことができるようにしてある場合や、画像化された文字の前景色、背景色、サイズ等を、どんなユーザーエージェントであっても（つまりサーバサイドで）利用者が自由に変更できるような機能が提供されている場合は、1.4.5も、1.4.9を満たせます。
 
   1-4-6:
     1-4-6a:
@@ -1026,7 +1032,13 @@ checks:
       level: *lv3
       non-exist:
         - 1-4-9
-      name: ロゴ以外に画像化された文字を使っていない
+      relations:
+        1-4-5:
+          - 1-4-5a
+      name: 画像化された文字は書体のサンプル、ロゴタイプ、ブランドなど、伝える情報にとってそのテキストの特定の表現が必要不可欠である（例外なし）
+      tech: |
+        1-4-5aでは、CSSで得たい視覚効果が得られないのであれば、画像化された文字を使っても良いとしていますが、1.4.9では、書体サンプル、ロゴタイプなど「どうしても視覚的な効果が本質的」である場合を除いて、画像化された文字の利用を禁じている、と理解してください。つまり、文字についての装飾はCSSでできる範囲にとどめるようにすれば、1.4.9を満たせます。
+        しかし、画像化された文字をJavaScript等で、テキスト情報に置き換えて、テキストとして扱うことができるようにしてある場合や、画像化された文字の前景色、背景色、サイズ等を、どんなユーザーエージェントであっても（つまりサーバサイドで）利用者が自由に変更できるような機能が提供されている場合は、1.4.9を満たせます。
 
   2-1-1:
     2-1-1a:
