--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -841,8 +841,6 @@ checks:
           - 1-4-5a
           - 1-4-5b
           - 1-4-5c
-        1-4-9:
-          - 1-4-9a
       level: *lv2
       name: 画像化された文字は書体のサンプル、ロゴタイプ、ブランドなど、伝える情報にとってそのテキストの特定の表現が必要不可欠である
       tech: |
@@ -2002,9 +2000,15 @@ checks:
           - 3-3-1a
           - 3-3-1b
           - 3-3-1c
+      non-exist:
+        - 3-3-1
+        - 3-3-3
+        - 3-3-4
+        - 3-3-6
       level: *lv1
       name: 必須項目や形式の指定のあるフォームは存在しない
-
+      tech: |
+        関連する達成基準が「適用なし適合」になります
     3-3-1c:
       criterion: *c3-3-1
       pass:
