--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -17,6 +17,8 @@ engines:
   phpmd:
     enabled: true
     checks:
+      Controversial/CamelCasePropertyName:
+        enabled: false
       Controversial/CamelCaseClassName:
         enabled: false
       Naming/ShortVariable:
