--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -23,6 +23,8 @@ engines:
         enabled: false
       Controversial/CamelCaseClassName:
         enabled: false
+      Controversial/CamelCaseVariableName:
+        enabled: false
       Naming/ShortVariable:
         enabled: false
 ratings:
