--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ php:
   - nightly
 script:
   - sh ./.travis/php_lint.sh
+addons:
+    code_climate:
+        repo_token: bfbcb1fbe6a2f54fe1895ae185b1d5405ed8ad4cdb88da9250fbe5e30f8ad6b5
