--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -1775,10 +1775,11 @@ checks:
       relations:
         3-1-3:
           - 3-1-3a
-      name: 難しい用語、技術語、言語特有の慣用句が存在するが、適切な注釈があるか、リンク先で説明されているか、同じ内容のわかりやすい代替ページが存在する
+      name: 難しい用語、技術語、言語特有の慣用句、リート語が存在するが、適切な注釈があるか、リンク先で説明されているか、同じ内容のわかりやすい代替ページが存在する
       tech: |
         一般的でない難しい用語は、その定義を参照できるようになっていることが望ましい。「難しい用語」というのは例えば慣用句なども含む。Understandingの例では、「匙を投げる」が「スプーンを投げる」という意味でない事例を挙げているが、こういった言葉に逐一注釈をしていくというよりも、そもそも難しい言葉を避けるという対応が求められていると考えたほうがシンプルかもしれない。
         あるいは「難しい言葉を使っているページの代替ページ」という考え方自体に難しさがあるかもしれないが、代替ページを用意すべきかもしれない。
+        ちなみに「リート語」とは英語圏のインターネットスラング。「Leet」と表記するが、これ自体「1337」というリート語表現がある。
         余談だが、「A11y」というアクセシビリティの用語の説明で、「A11yという表記自体、アクセシブルでない」とあったのが印象的です。
 
   3-1-4:
