--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -31,6 +31,8 @@ engines:
         enabled: false
       Naming/ShortVariable:
         enabled: false
+      CleanCode/ElseExpression:
+        enabled: false
 ratings:
   paths:
   - "**.css"
